--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "jest": {
     "testEnvironment": "node"
   },
-  "peerDependencies": {},
   "engines": {
     "node": ">=12"
   },
@@ -57,6 +56,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "node-cron": "^3.0.2"
   }
 }
